--- a/wiseSaying/wiseSaying/View/Base.lproj/Main.storyboard
+++ b/wiseSaying/wiseSaying/View/Base.lproj/Main.storyboard
@@ -178,6 +178,14 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="czn-9V-2nD">
+                                <rect key="frame" x="20" y="766" width="353" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="알람 테스트"/>
+                                <connections>
+                                    <action selector="notiificationTextButton:" destination="3qO-zN-EzK" eventType="touchUpInside" id="4Wc-FX-Lte"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="7Ze-18-OeI"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -193,11 +201,14 @@
                             <constraint firstItem="d5A-aD-1pY" firstAttribute="top" secondItem="74o-Wz-vUc" secondAttribute="bottom" constant="20" id="M0j-v0-JTb"/>
                             <constraint firstItem="Jny-Yc-Uwy" firstAttribute="leading" secondItem="7Ze-18-OeI" secondAttribute="leading" constant="20" id="MiW-ub-TS4"/>
                             <constraint firstItem="Jny-Yc-Uwy" firstAttribute="top" secondItem="BAD-Vc-B8H" secondAttribute="top" constant="95" id="QVw-vc-Hk2"/>
+                            <constraint firstItem="czn-9V-2nD" firstAttribute="top" secondItem="d5A-aD-1pY" secondAttribute="bottom" constant="20" id="S2W-Ik-ElQ"/>
                             <constraint firstItem="7Ze-18-OeI" firstAttribute="trailing" secondItem="nKm-mm-2Qt" secondAttribute="trailing" constant="20" id="Sx7-Rd-dbL"/>
                             <constraint firstItem="JLr-nz-9A6" firstAttribute="top" secondItem="AJ1-ZP-zT4" secondAttribute="bottom" constant="20" id="VoV-bc-MUG"/>
+                            <constraint firstItem="7Ze-18-OeI" firstAttribute="trailing" secondItem="czn-9V-2nD" secondAttribute="trailing" constant="20" id="W8p-VZ-VV2"/>
                             <constraint firstItem="74o-Wz-vUc" firstAttribute="leading" secondItem="AJ1-ZP-zT4" secondAttribute="trailing" constant="20" id="bOl-kh-cdJ"/>
                             <constraint firstItem="nKm-mm-2Qt" firstAttribute="leading" secondItem="JeG-ZK-S29" secondAttribute="trailing" constant="20" id="fZH-W1-1Fp"/>
                             <constraint firstItem="7Ze-18-OeI" firstAttribute="trailing" secondItem="Jny-Yc-Uwy" secondAttribute="trailing" constant="20" id="nHX-pK-0Cs"/>
+                            <constraint firstItem="czn-9V-2nD" firstAttribute="leading" secondItem="7Ze-18-OeI" secondAttribute="leading" constant="20" id="oBg-KF-VW3"/>
                             <constraint firstItem="JLr-nz-9A6" firstAttribute="leading" secondItem="7Ze-18-OeI" secondAttribute="leading" constant="20" id="smo-EQ-KCo"/>
                             <constraint firstItem="7Ze-18-OeI" firstAttribute="trailing" secondItem="74o-Wz-vUc" secondAttribute="trailing" constant="20" id="z86-Xr-o88"/>
                         </constraints>
